@@ -33,7 +33,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd January 4, 2008
+.Dd January 15, 2008
 .Dt ATF-TEST-CASE 8
 .Os
 .Sh NAME
@@ -186,6 +186,20 @@ In the future, it is expected that the test case will attempt to gain the
 necessary privileges on its own before failing.
 At the very least, lowering the privileges from the super-user to an
 unprivileged user will be supported.
+.It timeout
+Type: integral.
+Required; defaults to
+.Sq 300 .
+Specifies the maximum amount of time the test case can run.
+This is particularly useful because some tests can stall either because they
+are incorrectly coded or because they trigger an anomalous behavior of the
+program.
+It is not acceptable for these tests to stall the whole execution of the
+test program.
+.Pp
+Can optionally be set to zero, in which case the test case has no run-time
+limit.
+This is discouraged.
 .El
 .Ss Environment
 Every time a test case is executed, several environment variables are
