@@ -21,6 +21,10 @@ Changes:
   machine type through the new 'require.arch' and 'require.machine'
   meta-data properties, respectively.
 
+* Added the 'timeout' property to test cases, useful to set an upper-bound
+  limit for the test's run time and thus prevent global test program stalls
+  due to the test case's misbehavior.
+
 * Fixed a serious bug that prevented atf-run(1) from working at all under
   Fedora 8 x86_64.  Due to the nature of the bug, other platforms were
   likely affected too.
